--- a/src/views/views.cuentas.bloqueadas.ejs
+++ b/src/views/views.cuentas.bloqueadas.ejs
@@ -1,81 +1,205 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador - Cuentas bloqueadas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/panel.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+    <link rel="stylesheet" href="/css/permisos.css">
+    <link rel="stylesheet" href="/css/panel.css">
+    <link rel="stylesheet" href="/css/bloqueos.css">
+    <title>Administrador - Cuentas bloqueadas</title>
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="row">
             <%- include('./components/menu'); %>
-            <div class="content col-md-10">
-                <div class="row mb-4 header-row">
-                    <div class="col-12 d-flex">
-                        <div class="row w-100">
-                            <div class="col-12">
-                                <h1>Cuentas Bloqueadas</h1>
+                <div class="content col-md-10">
+                    <div class="row mb-4 header-row">
+                        <div class="col-12 d-flex">
+                            <div class="row w-100">
+                                <div class="col-8">
+                                    <h1>Administrador</h1>
+                                    <h1>Cuentas Bloqueadas</h1>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">ID</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Apellido</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Celular</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Contraseña</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Rol</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Estado</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% users.body.forEach(user => { %>
+                    <br><br>
+                    <div class="col-12">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
+                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Apellido</th>
+                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Contraseña</th>
+                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Rol</th>
+                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Estado</th>
+                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Accion</th>
+                                </tr>
+                            </thead>
+                            <tbody>
                                 <tr class="table-active">
-                                    <td class="id_usuario"><%= user.ID %></td>
-                                    <td><%= user.Nombre.split(' ')[0] %></td> 
-                                    <td><%= user.Nombre.split(' ')[1] || '' %></td> 
-                                    <td><%= user.Correo %></td> 
-                                    <td>****</td> 
-                                    <td>    
-                                        <select class="form-select">
-                                            <option value="2" <%= user.Rol === 'Usuario' ? 'selected' : '' %>>Usuario</option>
-                                            <option value="4" <%= user.Rol === 'Invitado' ? 'selected' : '' %>>Invitado</option>
-                                            <option value="3" <%= user.Rol === 'Moderador' ? 'selected' : '' %>>Moderador</option>
-                                            <option value="1" <%= user.Rol === 'Administrador' ? 'selected' : '' %>>Administrador</option>
-                                        </select>
-                                    </td>
-                                    <td class="estado"><%= user.Estado %></td>
+                                    <td>Juan</td>
+                                    <td>Pérez</td>
+                                    <td>****</td>
+                                    <td>Cliente</td>
+                                    <td>Bloqueado</td>
                                     <td>
                                         <div class="btn-group" role="group">
-                                            <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
-                                                <i class="fa-solid fa-key"></i>
-                                            </button>
-                                            <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
-                                                <i class="fa-solid fa-pen"></i>
-                                            </button>
-                                            <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
-                                                <i class="fa-solid fa-trash"></i>
+                                            <button style="background-color: #1E3DEA;" type="button"
+                                                class="btn btn-edit btn-sm" data-bs-toggle="modal"
+                                                data-bs-target="#permissionsModal">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" style="fill: white;transform: msFilter">
+                                                    <path
+                                                        d="m7 17.013 4.413-.015 9.632-9.54c.378-.378.586-.88.586-1.414s-.208-1.036-.586-1.414l-1.586-1.586c-.756-.756-2.075-.752-2.825-.003L7 12.583v4.43zM18.045 4.458l1.589 1.583-1.597 1.582-1.586-1.585 1.594-1.58zM9 13.417l6.03-5.973 1.586 1.586-6.029 5.971L9 15.006v-1.589z">
+                                                    </path>
+                                                    <path
+                                                        d="M5 21h14c1.103 0 2-.897 2-2v-8.668l-2 2V19H8.158c-.026 0-.053.01-.079.01-.033 0-.066-.009-.1-.01H5V5h6.847l2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2z">
+                                                    </path>
+                                                </svg>
                                             </button>
                                         </div>
                                     </td>
                                 </tr>
-                                <% }); %>
-                        </tbody>
-                    </table>
+                                <tr>
+                                    <td>María</td>
+                                    <td>González</td>
+                                    <td>****</td>
+                                    <td>Secretaria</td>
+                                    <td>Bloqueado</td>
+                                    <td>
+                                        <div class="btn-group" role="group">
+                                            <button style="background-color: #1E3DEA;" type="button"
+                                                class="btn btn-edit btn-sm" data-bs-toggle="modal"
+                                                data-bs-target="#permissionsModal">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" style="fill: white;transform: msFilter">
+                                                    <path
+                                                        d="m7 17.013 4.413-.015 9.632-9.54c.378-.378.586-.88.586-1.414s-.208-1.036-.586-1.414l-1.586-1.586c-.756-.756-2.075-.752-2.825-.003L7 12.583v4.43zM18.045 4.458l1.589 1.583-1.597 1.582-1.586-1.585 1.594-1.58zM9 13.417l6.03-5.973 1.586 1.586-6.029 5.971L9 15.006v-1.589z">
+                                                    </path>
+                                                    <path
+                                                        d="M5 21h14c1.103 0 2-.897 2-2v-8.668l-2 2V19H8.158c-.026 0-.053.01-.079.01-.033 0-.066-.009-.1-.01H5V5h6.847l2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2z">
+                                                    </path>
+                                                </svg>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Carlos</td>
+                                    <td>López</td>
+                                    <td>****</td>
+                                    <td>Tecnico</td>
+                                    <td>Bloqueado</td>
+                                    <td>
+                                        <div class="btn-group" role="group">
+                                            <button style="background-color: #1E3DEA;" type="button"
+                                                class="btn btn-edit btn-sm" data-bs-toggle="modal"
+                                                data-bs-target="#permissionsModal">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" style="fill: white;transform: msFilter">
+                                                    <path
+                                                        d="m7 17.013 4.413-.015 9.632-9.54c.378-.378.586-.88.586-1.414s-.208-1.036-.586-1.414l-1.586-1.586c-.756-.756-2.075-.752-2.825-.003L7 12.583v4.43zM18.045 4.458l1.589 1.583-1.597 1.582-1.586-1.585 1.594-1.58zM9 13.417l6.03-5.973 1.586 1.586-6.029 5.971L9 15.006v-1.589z">
+                                                    </path>
+                                                    <path
+                                                        d="M5 21h14c1.103 0 2-.897 2-2v-8.668l-2 2V19H8.158c-.026 0-.053.01-.079.01-.033 0-.066-.009-.1-.01H5V5h6.847l2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2z">
+                                                    </path>
+                                                </svg>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-4 d-flex">
+                        <button class="btn btn-primary btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#blockingPoliciesModal">Políticas de bloqueo</button>
+                    </div>
                 </div>
         </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="permissionsModal" tabindex="-1" aria-labelledby="permissionsModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header modal-header-custom">
+                    <h5 class="modal-title" id="permissionsModalLabel">¿DESEA DESBLOQUEAR ESTE USUARIO?</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="unlock-icon-container">
+                        <svg width="80" height="80" viewBox="0 0 222 222" fill="none" xmlns="http://www.w3.org/2000/svg"
+                            id="unlock-icon">
+                            <path
+                                d="M110.938 147.393C116.042 147.393 120.18 143.255 120.18 138.15C120.18 133.046 116.042 128.908 110.938 128.908C105.834 128.908 101.696 133.046 101.696 138.15C101.696 143.255 105.834 147.393 110.938 147.393Z"
+                                fill="white" />
+                            <path
+                                d="M157.149 73.4534H92.4534V54.9689C92.4534 50.0665 94.4008 45.3649 97.8673 41.8984C101.334 38.4319 106.035 36.4845 110.938 36.4845C115.84 36.4845 120.542 38.4319 124.008 41.8984C127.475 45.3649 129.422 50.0665 129.422 54.9689C129.422 57.4201 130.396 59.7709 132.129 61.5042C133.863 63.2374 136.213 64.2111 138.665 64.2111C141.116 64.2111 143.466 63.2374 145.2 61.5042C146.933 59.7709 147.907 57.4201 147.907 54.9689C147.907 45.1641 144.012 35.761 137.079 28.8279C130.146 21.8949 120.743 18 110.938 18C101.133 18 91.7299 21.8949 84.7969 28.8279C77.8638 35.761 73.9689 45.1641 73.9689 54.9689V73.4534H64.7267C57.3731 73.4534 50.3207 76.3746 45.121 81.5743C39.9212 86.7741 37 93.8265 37 101.18V175.118C37 182.471 39.9212 189.524 45.121 194.724C50.3207 199.923 57.3731 202.845 64.7267 202.845H157.149C164.503 202.845 171.555 199.923 176.755 194.724C181.954 189.524 184.876 182.471 184.876 175.118V101.18C184.876 93.8265 181.954 86.7741 176.755 81.5743C171.555 76.3746 164.503 73.4534 157.149 73.4534ZM110.938 165.876C105.454 165.876 100.093 164.25 95.5337 161.203C90.9741 158.156 87.4203 153.826 85.3217 148.76C83.2231 143.693 82.6741 138.118 83.7439 132.74C84.8137 127.361 87.4544 122.421 91.3321 118.543C95.2097 114.666 100.15 112.025 105.529 110.955C110.907 109.885 116.482 110.434 121.548 112.533C126.615 114.631 130.945 118.185 133.992 122.745C137.038 127.304 138.665 132.665 138.665 138.149C138.665 145.503 135.743 152.555 130.544 157.755C125.344 162.954 118.291 165.876 110.938 165.876Z"
+                                fill="white" />
+                        </svg>
+                    </div>
+                    <p class="modal-message">El usuario será desbloqueado del sistema</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Continuar</button>
+                </div>
+            </div>
+        </div>
     </div>
-    <script src="/js/cuenta-bloqueo.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Modal for Blocking Policies -->
+    <div class="modal fade" id="blockingPoliciesModal" tabindex="-1" aria-labelledby="blockingPoliciesModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header modal-header-custom">
+                    <h5 class="modal-title" id="blockingPoliciesModalLabel">Configurar Políticas de Bloqueo</h5>
+                </div>
+                <div class="modal-body">
+                    <form id="blockingPoliciesForm">
+                        <div class="mb-3">
+                            <label for="maxAttempts" class="form-label">Número Máximo de Intentos</label>
+                            <input type="number" class="form-control" id="maxAttempts"
+                                placeholder="Número máximo de intentos fallidos antes del bloqueo">
+                        </div>
+                        <div class="mb-3">
+                            <label for="blockDuration" class="form-label">Duración del Bloqueo (minutos)</label>
+                            <input type="number" class="form-control" id="blockDuration"
+                                placeholder="Duración del bloqueo en minutos">
+                        </div>
+                        <div class="mb-3">
+                            <label for="notifyAdmins" class="form-label">Notificar a Administradores</label>
+                            <input type="checkbox" id="notifyAdmins"> Notificar a los administradores cuando una cuenta
+                            se bloquee.
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" onclick="saveBlockingPolicies()">Guardar
+                        Cambios</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+<script>
+    document.querySelectorAll('.btn-primary').forEach(button => {
+        button.addEventListener('click', () => {
+            const dropdownId = button.id.replace('button', 'dropdown');
+            const dropdown = document.getElementById(dropdownId);
+            dropdown.style.display = dropdown.style.display === 'none' ? 'flex' : 'none';
+        });
+    });
+</script>
+<script src="/js/botones.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
