--- a/src/public/css/eliminacionCuenta.css
+++ b/src/public/css/eliminacionCuenta.css
@@ -1,69 +1,148 @@
 /* styles.css */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Corbel";
 }
 
-.form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 700px;
+@font-face {
+  font-family: "Corbel";
+  src: url(../font/CORBEL.TTF);
 }
 
-h2 {
-    font-size: 18px;
-    margin-bottom: 10px;
+.bgContainer {
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 9fr;
 }
 
-p {
-    font-size: 14px;
-    margin-bottom: 20px;
+.navBar {
+  grid-row: 1;
+  background-color: #394dc0;
+  width: calc(100% - 10px);
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-right: 10px;
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+.iconContainer {
+  margin: 10px;
+  border-radius: 100%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-input[type="text"],
-textarea {
-    width: 90%;
-    padding: 8px;
-    margin-bottom: 15px ;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
-    
+.iconNotification {
+  width: 36px;
 }
 
-.buttons {
-    display: flex;
-    justify-content: space-between;
+.iconPerfil {
+  width: 36px;
 }
 
-button {
-    padding: 10px 20px;
-    font-size: 14px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 0 5vh 0 30vh;
+.mainContainer {
+  grid-row: 2;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.cancel {
-    background-color: #d9534f;
-    color: white;
+.formContainer {
+  border: 2px solid black;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr 2fr 2fr 2fr 1fr;
+  width: 50%;
+  height: 80%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
-.submit {
-    background-color: #0275d8;
-    color: white;
+.titleContainer {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border-bottom: 2px dashed black;
+}
+
+.messageContainer {
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+}
+
+.message {
+  font-size: 18px;
+  text-align: justify;
+}
+
+.razonContainer {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+}
+
+.sugerenciaContainer {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+}
+
+.preguntaContainer {
+  width: 30%;
+}
+
+.pregunta {
+  font-size: 18px;
+}
+
+.inputContainer {
+  width: 100%;
+}
+
+.inputText {
+  width: calc(95% - 10px);
+  height: calc(80% - 10px);
+  flex-wrap: wrap;
+  resize: none;
+  scrollbar-width: none;
+  font-size: 18px;
+  padding: 10px;
+}
+
+.bgBtn {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.btnCancelar {
+  width: 120px;
+  height: 38px;
+  border-radius: 5px;
+  background-color: rgb(214, 4, 4);
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.btnEnviar {
+  width: 120px;
+  height: 38px;
+  border-radius: 5px;
+  background-color: #394dc0;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
