--- a/src/views/views.eliminacionCuenta.ejs
+++ b/src/views/views.eliminacionCuenta.ejs
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eliminación de su cuenta y datos asociados.</title>
-    <link rel="stylesheet" href="../css/eliminacionCuenta.css">
-</head>
-<body>
-
-    <div class="form-container">
-        <h2>Solicitud de eliminación de cuenta y datos asociados</h2>
-        <p>Lamentamos saber que estás considerando eliminar tu cuenta. Te agradeceríamos mucho si pudieras compartir la razón de tu decisión y cómo podríamos mejorarlo. Tu opinión es muy importante para nosotros y nos gustaría entender mejor tus necesidades.</p>
-        <form action="#" method="post">
-            <label for="reason">Cual fue la razón para eliminar la cuenta :</label>
-            <input type="text" id="reason" name="reason" value="Ya no utilizo esta cuenta">
-            
-            <label for="improvement">Como podemos mejorar :</label>
-            <textarea id="improvement" name="improvement" rows="4"></textarea>
-            
-            <div class="buttons">
-                <button type="button" class="cancel">Cancelar</button>
-                <button type="submit" class="submit">Enviar</button>
+    <link rel="stylesheet" href="../css/eliminacionCuenta.css" />
+  </head>
+  <body>
+    <div class="bgContainer">
+      <div class="navBar">
+        <div class="iconContainer">
+          <img src="../img/notification.png" class="iconNotification" />
+        </div>
+        <div class="iconContainer">
+          <img src="../img/user.png" class="iconPerfil" />
+        </div>
+      </div>
+      <div class="mainContainer">
+        <div class="formContainer">
+          <div class="titleContainer">
+            <h2 class="title">
+              Solicitud de eliminacion de cuenta y datos asociados
+            </h2>
+          </div>
+          <div class="messageContainer">
+            <p class="message">
+              Lamentamos saber que estás considerando eliminar tu cuenta. Te
+              agradeceríamos mucho si pudieras compartir la razón de tu decisión
+              y cómo podríamos mejorarlo. Tu opinión es muy importante para
+              nosotros y nos gustaría entender mejor tus necesidades.
+            </p>
+          </div>
+          <div class="razonContainer">
+            <div class="preguntaContainer">
+              <p class="pregunta">Cual fue la razon para eliminar la cuenta:</p>
             </div>
-        </form>
+            <div class="inputContainer">
+              <textarea name="razon" id="razon" class="inputText"></textarea>
+            </div>
+          </div>
+          <div class="sugerenciaContainer">
+            <div class="preguntaContainer">
+              <p class="pregunta">Como podemos mejorar:</p>
+            </div>
+            <div class="inputContainer">
+              <textarea name="razon" id="razon" class="inputText"></textarea>
+            </div>
+          </div>
+          <div class="bgBtn">
+            <div class="btnContainter">
+              <input type="button" value="Cancelar" class="btnCancelar" />
+              <input type="submit" value="Enviar" class="btnEnviar" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
